add paragraph to code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git website>
-</head>
+</head> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit dolore itaque in accusantium minus sunt perspiciatis esse quae fuga reprehenderit. Saepe officia deserunt quae totam quibusdam alias quia dicta. Aut.</p>
 <body>
-    
 </body>
 </html>
